--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -10,7 +8,7 @@ services:
       - ./uploads:/app/uploads
       - ./.streamlit:/app/.streamlit
     environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_API_KEY=OPENAI_API_KEY
     env_file:
       - .env
     restart: unless-stopped 
